update save and read result

--- a/Practice/Fun_practice.ipynb
+++ b/Practice/Fun_practice.ipynb
@@ -1002,42 +1002,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "id": "1d8d8563-95a1-4134-bba8-62ac4cc5dbc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def got_T_check_location(A1):\n",
+    "  ## A1 should like [247.5, 0]\n",
+    "  import numpy as np\n",
+    "  z = 19\n",
+    " \n",
+    "  A2_b =  (  (A1[0]-40), 0 )\n",
+    "  A3_b =  (  (A1[1]+40), 0 )\n",
+    "\n",
+    "  x = np.array(A1[0])\n",
+    "  y = np.array(A1[1])\n",
+    "\n",
+    "  # Define the rotation angle in radians (1 radian per second)\n",
+    "  r_points = []\n",
+    "  for i in [0,1]:\n",
+    "    angle = 120*(i+1)   / 180 * np.pi\n",
+    "     \n",
+    "    # Define the rotation matrix\n",
+    "    r_matrix = np.array([[np.cos(angle), -np.sin(angle)],\n",
+    "                      [np.sin(angle), np.cos(angle)]])\n",
+    "    # Stack x and y into a single array of shape (2, n) where n is the number of points\n",
+    "    points = np.vstack((x, y))\n",
+    "\n",
+    "    # Perform the rotation\n",
+    "    r_points.append( r_matrix @ points )\n",
+    "\n",
+    "  # Separate the rotated x and y coordinates\n",
+    "  A2 = r_points[0]\n",
+    "  A3 = r_points[1]\n",
+    "  A2_fin = ( round( A2[0][0],2) , round(A2[1][0],2), z)\n",
+    "  A3_fin = ( round( A3[0][0],2) , round(A3[1][0],2), z)\n",
+    "  A1_fin = ( round( A1[0],1) , round(A1[1],2), z)\n",
+    "  print( \"A1 location is \",A1_fin, \n",
+    "         \"\\nA2 location is \",A2_fin, \n",
+    "         \"\\nA3 location is \",A3_fin)\n",
+    "\n",
+    "  return A1_fin, A2_fin, A3_fin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "e8513acd-7a90-4060-9bba-c54716742f43",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-222.34513501] [-97.88692934]\n"
+      "A1 location is  (247.5, 0, 19) \n",
+      "A2 location is  (-123.75, 214.34, 19) \n",
+      "A3 location is  (-123.75, -214.34, 19)\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "x = np.array([26.4])\n",
-    "y = np.array([241.5])\n",
-    "\n",
-    "# Define the rotation angle in radians (1 radian per second)\n",
-    "rotation_degree = 120\n",
-    "rotation_radian = rotation_degree / 360 * 2 * np.pi\n",
-    "angle = rotation_radian  # 1 radian\n",
-    "\n",
-    "# Define the rotation matrix\n",
-    "r_matrix = np.array([[np.cos(angle), -np.sin(angle)],\n",
-    "                    [np.sin(angle), np.cos(angle)]])\n",
-    "\n",
-    "# Stack x and y into a single array of shape (2, n) where n is the number of points\n",
-    "points = np.vstack((x, y))\n",
-    "\n",
-    "# Perform the rotation\n",
-    "r_points = r_matrix @ points\n",
-    "\n",
-    "# Separate the rotated x and y coordinates\n",
-    "r_x = r_points[0, :]\n",
-    "r_y = r_points[1, :]\n",
-    "print(r_x,r_y)"
+    "A1_fin, A2_fin, A3_fin = got_T_check_location ( [247.5,0] )\n"
    ]
   },
   {
