--- a/Practice/Pdc/run_pdc.ipynb
+++ b/Practice/Pdc/run_pdc.ipynb
@@ -329,7 +329,8 @@
    "source": [
     "from main_code_pdc import main_code_pdc\n",
     "\n",
-    "c= [61,112,224]\n",
+    "#c= [61,112,224]\n",
+    "c =[19]\n",
     "angular = 36980\n",
     "mesh_max = 10\n",
     "c_contact = 1\n",
@@ -371,9 +372,9 @@
    "source": [
     "from main_code_pdc import main_code_pdc\n",
     "\n",
-    "#c= [3,5,7,10,15]\n",
-    "c = [3]\n",
-    "angular = 3698504\n",
+    "c= [1,2,3,5,7,10,15]\n",
+    "\n",
+    "angular = 61\n",
     "mesh_max = 10\n",
     "c_contact = 1\n",
     "type = 'mesh_size'\n",
