--- a/Project/Disc_thermal/Forward_Euler/run_simulation.ipynb
+++ b/Project/Disc_thermal/Forward_Euler/run_simulation.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "67f4471d-ca76-4458-85f6-c0dd0372b362",
    "metadata": {},
    "outputs": [
@@ -107,12 +107,12 @@
      "text": [
       "1: Total tims is  48.75 s\n",
       "2: Total numb steps is  12332\n",
-      "The file 'm-3-3.msh' exists, start reading:\n",
-      "Info    : Reading 'm-3-3.msh'...\n",
+      "The file 'm-3-7.msh' exists, start reading:\n",
+      "Info    : Reading 'm-3-7.msh'...\n",
       "Info    : 168 entities\n",
-      "Info    : 225961 nodes\n",
-      "Info    : 1184080 elements                                              \n",
-      "Info    : Done reading 'm-3-3.msh'                                         \n",
+      "Info    : 25313 nodes\n",
+      "Info    : 112156 elements\n",
+      "Info    : Done reading 'm-3-7.msh'                                         \n",
       "\n"
      ]
     },
@@ -127,7 +127,7 @@
       "\u001b[0;31mFileExistsError\u001b[0m: [Errno 17] File exists: '/home/yanjun/.cache/fenics/libffcx_forms_7bf98488828cb4778e680a842d9fdf534ce707ab.c'",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mTimeoutError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m c_contact \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mtype\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmesh_size\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 10\u001b[0m main_code_disc_thermal(c, \u001b[38;5;28mtype\u001b[39m ,angular, mesh_max, c_contact)\n",
+      "Cell \u001b[0;32mIn[4], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m c_contact \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mtype\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmesh_size\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 10\u001b[0m main_code_disc_thermal(c, \u001b[38;5;28mtype\u001b[39m ,angular, mesh_max, c_contact)\n",
       "File \u001b[0;32m~/Documents/FEniCSx/Project/Disc_thermal/Forward_Euler/main_code_disc_thermal.py:258\u001b[0m, in \u001b[0;36mmain_code_disc_thermal\u001b[0;34m(c, type, angular1, mesh_max1, c_contact1)\u001b[0m\n\u001b[1;32m    251\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m19\u001b[39m)):\n\u001b[1;32m    252\u001b[0m         F \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m ( \n\u001b[1;32m    253\u001b[0m     \u001b[38;5;241m+\u001b[39m inner(g[\u001b[38;5;241m0\u001b[39m], v) \u001b[38;5;241m*\u001b[39m ds(\u001b[38;5;241m10\u001b[39m \u001b[38;5;241m*\u001b[39m i) \n\u001b[1;32m    254\u001b[0m     \u001b[38;5;241m-\u001b[39m h \u001b[38;5;241m*\u001b[39m inner( u_n, v) \u001b[38;5;241m*\u001b[39m ds(\u001b[38;5;241m10\u001b[39m \u001b[38;5;241m*\u001b[39m i)  \n\u001b[1;32m    255\u001b[0m     \u001b[38;5;241m-\u001b[39m radiation \u001b[38;5;241m*\u001b[39m inner( (u_n\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m4\u001b[39m \u001b[38;5;241m-\u001b[39m Tm\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m4\u001b[39m), v) \u001b[38;5;241m*\u001b[39m ds(\u001b[38;5;241m10\u001b[39m \u001b[38;5;241m*\u001b[39m i) \n\u001b[1;32m    256\u001b[0m     )\n\u001b[0;32m--> 258\u001b[0m problem \u001b[38;5;241m=\u001b[39m NonlinearProblem(F, u, bcs\u001b[38;5;241m=\u001b[39m[bc])\n\u001b[1;32m    260\u001b[0m \u001b[38;5;66;03m## 7: Using petsc4py to create a linear solver\u001b[39;00m\n\u001b[1;32m    261\u001b[0m solver \u001b[38;5;241m=\u001b[39m NewtonSolver(MPI\u001b[38;5;241m.\u001b[39mCOMM_WORLD, problem)\n",
       "File \u001b[0;32m~/miniconda3/envs/fenicsx/lib/python3.12/site-packages/dolfinx/fem/petsc.py:897\u001b[0m, in \u001b[0;36mNonlinearProblem.__init__\u001b[0;34m(self, F, u, bcs, J, form_compiler_options, jit_options)\u001b[0m\n\u001b[1;32m    868\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m    869\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m    870\u001b[0m     F: ufl\u001b[38;5;241m.\u001b[39mform\u001b[38;5;241m.\u001b[39mForm,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    875\u001b[0m     jit_options: typing\u001b[38;5;241m.\u001b[39mOptional[\u001b[38;5;28mdict\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m    876\u001b[0m ):\n\u001b[1;32m    877\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Initialize solver for solving a non-linear problem using Newton's method`.\u001b[39;00m\n\u001b[1;32m    878\u001b[0m \n\u001b[1;32m    879\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    895\u001b[0m \n\u001b[1;32m    896\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 897\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_L \u001b[38;5;241m=\u001b[39m _create_form(\n\u001b[1;32m    898\u001b[0m         F, form_compiler_options\u001b[38;5;241m=\u001b[39mform_compiler_options, jit_options\u001b[38;5;241m=\u001b[39mjit_options\n\u001b[1;32m    899\u001b[0m     )\n\u001b[1;32m    901\u001b[0m     \u001b[38;5;66;03m# Create the Jacobian matrix, dF/du\u001b[39;00m\n\u001b[1;32m    902\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m J \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
       "File \u001b[0;32m~/miniconda3/envs/fenicsx/lib/python3.12/site-packages/dolfinx/fem/forms.py:249\u001b[0m, in \u001b[0;36mform\u001b[0;34m(form, dtype, form_compiler_options, jit_options, entity_maps)\u001b[0m\n\u001b[1;32m    246\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m sub_form: _create_form(sub_form), form))\n\u001b[1;32m    247\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m form\n\u001b[0;32m--> 249\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _create_form(form)\n",
@@ -145,7 +145,7 @@
     "from main_code_disc_thermal import main_code_disc_thermal\n",
     "\n",
     "#c= [3,5,7,10,15]\n",
-    "c = [3,5,7]\n",
+    "c = [7]\n",
     "angular = 11\n",
     "mesh_max = 10\n",
     "c_contact = 1\n",
