--- a/practice/Fun_practice.ipynb
+++ b/practice/Fun_practice.ipynb
@@ -1694,9 +1694,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4cc9d8a7-0ea9-4214-8cd2-30a2c51289a0",
+   "metadata": {},
+   "source": [
+    "# Find temperature locations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "73fcd555-5c29-4493-bb0b-85e3d4540ac0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Closest coordinate is \n",
+      " (253.82, 3.67, 20.0) \n",
+      " (-114.48, 211.9, 20.0) \n",
+      " (-131.42, -208.65, 20.0) \n",
+      "Please open the xdmf file in paraview, and find the labels for above three nodes and input as \n",
+      "T_3_labels = [label1, label2, label3]. \n",
+      "Please also add in labels dictionary, functions in disc_f.py \n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "import sys\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "sys.path.append('/home/yanjun/documents/fenicsx/project/therm_disc/implicit/tetrahedron/')\n",
+    "\n",
+    "from disc_f import *\n",
+    "mesh_filename1 = '/home/yanjun/documents/fenicsx/project/therm_disc/implicit/tetrahedron/m-3-20.msh'\n",
+    "\n",
+    "lables = find_3_coord(mesh_filename1)\n",
+    "# T_3_labels = 333431, 308947, 18936   # 1-2 mesh\n",
+    "# for i in range(len(T)):\n",
+    "#   print( T[i][T_3_labels[1]] )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6973b9c0-8349-4753-9e26-fa759893debf",
+   "id": "fc80135d-db72-488e-9da9-7cba68ef3bd7",
    "metadata": {},
    "outputs": [],
    "source": []
