--- a/fun_practice.ipynb
+++ b/fun_practice.ipynb
@@ -1302,7 +1302,11 @@
    "id": "354dcd2d-db68-4ac3-846d-cec941daeebd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mesh = Mesh()\n",
+    "with XDMFFile(\"tetra_mesh.xdmf\") as infile:\n",
+    "    infile.read(mesh)"
+   ]
   }
  ],
  "metadata": {
