--- a/mech_disc/thermoelasticity_weak.ipynb
+++ b/mech_disc/thermoelasticity_weak.ipynb
@@ -52,25 +52,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Coefficient(FunctionSpace(Mesh(blocked element (Basix element (P, quadrilateral, 1, gll_warped, unset, False, float64, []), (2,)), 0), Basix element (P, quadrilateral, 1, gll_warped, unset, False, float64, [])), 0)"
+       "function"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(lateral_sides)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Coefficient(FunctionSpace(Mesh(blocked element (Basix element (P, quadrilateral, 1, gll_warped, unset, False, float64, []), (2,)), 0), Basix element (P, quadrilateral, 1, gll_warped, unset, False, float64, [])), 2)"
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "VT = fem.functionspace(domain, (\"Q\", 1))\n",
+    "# T_ is the test function, like v\n",
     "T_, dT = ufl.TestFunction(VT), ufl.TrialFunction(VT)\n",
     "Delta_T = fem.Function(VT, name=\"Temperature_variation\")\n",
+    "# a is grad T, grad T_, like grad u, grad v\n",
     "aT = ufl.dot(ufl.grad(dT), ufl.grad(T_)) * ufl.dx\n",
+    "# L is 0, o*v, v is T_\n",
     "LT = fem.Constant(domain, 0.0) * T_ * ufl.dx\n",
     "\n",
     "bot_dofs_T = fem.locate_dofs_geometrical(VT, bottom)\n",
@@ -284,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "tags": [
      "hide-input"
