--- a/mech_disc/brake_pad_separate.ipynb
+++ b/mech_disc/brake_pad_separate.ipynb
@@ -285,74 +285,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17025\n",
-      "17025\n",
-      "[13162 13163 13164 13165 13167 13281 13282 13296 13297 13300 13301 13304\n",
-      " 13305 13306 13308 13309 13311 13312 13313 13315 13320 13321 13322 13415\n",
-      " 13417 13420 13421 13422 13423 13428 13429 13433 13434 13435 13508 13510\n",
-      " 13512 13520 13521 13522 13531 13532 13533 13534 13535 13536 13537 13538\n",
-      " 13544 13602 13615 13616 13626 13632 13634 13635 13636 13637 13649 13653\n",
-      " 13654 13655 13658 13659 13660 13661 13663 13664 13665 13667 13668 13669\n",
-      " 13720 13724 13725 13729 13739 13742 13754 13757 13758 13762 13777 13780\n",
-      " 13781 13782 13783 13785 13787 13788 13789 13790 13792 13793 13841 13845\n",
-      " 13847 13852 13853 13854 13856 13857 13861 13862 13863 13864 13877 13880\n",
-      " 13881 13882 13884 13893 13895 13896 13900 13901 13903 13904 13906 13907\n",
-      " 13908 13909 13910 13913 13914 13915 13916 13917 13918 13931 13939 13944\n",
-      " 13945 13946 13948 13950 13953 13960 13961 13962 13975 13976 13979 13983\n",
-      " 13985 13988 13991 13994 13995 13996 13997 13999 14000 14003 14004 14005\n",
-      " 14008 14019 14020 14021 14043 14046 14052 14053 14054 14058 14060 14068\n",
-      " 14070 14075 14087 14088 14089 14091 14097 14098 14099 14100 14102 14107\n",
-      " 14108 14111 14113 14114 14119 14149 14150 14151 14161 14163 14164 14165\n",
-      " 14175 14176 14177 14182 14183 14184 14194 14196 14198 14199 14206 14207\n",
-      " 14208 14211 14212 14215 14218 14219 14222 14228 14229 14230 14231 14232\n",
-      " 14243 14244 14279 14281 14282 14283 14284 14285 14289 14291 14293 14301\n",
-      " 14303 14307 14311 14312 14313 14315 14316 14317 14319 14321 14322 14324\n",
-      " 14326 14327 14335 14336 14344 14345 14350 14351 14353 14354 14356 14363\n",
-      " 14380 14401 14402 14403 14406 14408 14409 14429 14430 14431 14435 14437\n",
-      " 14439 14440 14441 14456 14459 14467 14478 14482 14484 14511 14517 14519\n",
-      " 14520 14521 14522 14523 14531 14532 14534 14539 14546 14548 14549 14550\n",
-      " 14551 14552 14553 14554 14559 14565 14566 14568 14571 14572 14580 14589\n",
-      " 14592 14594 14604 14605 14606 14611 14613 14630 14635 14636 14641 14643\n",
-      " 14644 14645 14651 14652 14653 14655 14657 14659 14660 14661 14662 14667\n",
-      " 14668 14673 14674 14675 14676 14677 14681 14685 14688 14691 14703 14708\n",
-      " 14710 14714 14717 14718 14740 14743 14744 14745 14753 14756 14764 14769\n",
-      " 14781 14782 14789 14791 14792 14796 14797 14801 14834 14838 14839 14840\n",
-      " 14841 14842 14846 14850 14855 14858 14859 14860 14861 14862 14874 14881\n",
-      " 14883 14888 14890 14891 14897 14906 14907 14911 14913 14920 14921 14926\n",
-      " 14940 14944 14945 14946 14947 14948 14949 14952 14957 14960 14961 14965\n",
-      " 14969 14977 14981 14986 14990 14992 14994 14995 15008 15016 15036 15037\n",
-      " 15043 15044 15046 15052 15055 15056 15060 15061 15063 15065 15072 15075\n",
-      " 15079 15084 15085 15088 15093 15095 15098 15107 15108 15109 15110 15111\n",
-      " 15116 15119 15120 15124 15131 15137 15138 15144 15165 15166 15168 15173\n",
-      " 15175 15187 15191 15192 15196 15205 15206 15207 15208 15218 15224 15242\n",
-      " 15244 15245 15251 15255 15264 15272 15274 15275 15276 15279 15280 15284\n",
-      " 15290 15293 15307 15311 15318 15320 15330 15331 15345 15346 15348 15359\n",
-      " 15362 15371 15377 15382 15386 15388 15394 15403 15404 15409 15410 15411\n",
-      " 15413 15414 15432 15449 15450 15464 15473 15474 15475 15482 15488 15489\n",
-      " 15522 15526 15527 15607]\n"
+      "515\n"
      ]
     }
    ],
    "source": [
-    "c = ( deformed_co[:, 2] < (z1+1)) & (deformed_co[:, 2] > (z1-1))\n",
-    "print(len(c))\n",
-    "print(len(u_d_vals))\n",
-    "#contact_dofs = fem.locate_dofs_geometrical(Vu, bottom_contact_nodes)\n",
-    "def bottom_contact_nodes(x):\n",
-    "    return np.isclose(x[2], z1)\n",
-    "boundaries = []\n",
+    "### works on here, now we have all nodes index for contact zone, we need found all contact zone in origin domain.\n",
+    "\n",
+    "boundary_dofs = []\n",
     "for j in range(18):\n",
+    "    marker = (j + 1) * 10\n",
+    "    locator_func = lambda x, j=j: (x[0] - x_co[j])**2 + (x[1] - y_co[j])**2 <= S_rub_circle\n",
+    "    dofs = fem.locate_dofs_geometrical(Vu, locator_func)\n",
+    "    boundary_dofs.append((marker, dofs))\n",
+    "\n",
+    "dof_coordinates = Vu.tabulate_dof_coordinates().reshape(-1, 3)  # Auto-detect dimensions\n",
+    "\n",
+    "# Extract nodes corresponding to these dofs for each boundary marker\n",
+    "for marker, dofs in boundary_dofs:\n",
+    "    boundary_nodes = dof_coordinates[dofs]\n",
+    "print (len (boundary_nodes)  ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1332\n",
+      "508\n",
+      "[(10, <function <lambda> at 0x7256bc23ea20>), (20, <function <lambda> at 0x7256bc23e980>), (30, <function <lambda> at 0x7256bc23e3e0>), (40, <function <lambda> at 0x7256bc23e5c0>), (50, <function <lambda> at 0x7256bc23e700>), (60, <function <lambda> at 0x7256bc23e520>), (70, <function <lambda> at 0x7256bc23e480>), (80, <function <lambda> at 0x7256bc23eb60>), (90, <function <lambda> at 0x7256bc23eac0>), (100, <function <lambda> at 0x7256bc23e2a0>), (110, <function <lambda> at 0x7256bc23e160>), (120, <function <lambda> at 0x7256bc23e0c0>), (130, <function <lambda> at 0x7256bc23e200>), (140, <function <lambda> at 0x7256bc23e020>), (150, <function <lambda> at 0x7256bc23dee0>), (160, <function <lambda> at 0x7256bc23de40>), (170, <function <lambda> at 0x7256bc23df80>), (180, <function <lambda> at 0x7256bc23dda0>)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "contact_boolean = ( deformed_co[:, 2] < (z1+1)) & (deformed_co[:, 2] > (z1-1))\n",
+    "contact_indices = np.where(contact_boolean)[0]\n",
+    "#print((true_indices))\n",
+    "print(len(contact_indices))\n",
+    "\n",
+    "boundaries = []\n",
+    "for j in range(18): # boundaries include (marker, locator) \n",
     "        boundaries.append  (  ( (j+1)*10, lambda x,j=j: (x[0]-x_co[j])**2 +(x[1]-y_co[j])**2 <= S_rub_circle)  )\n",
-    "# boundaries include (marker, locator) \n",
-    "contact_dofs = fem.locate_dofs_geometrical(Vu, boundaries[0][1])\n",
-    "print(contact_dofs)"
+    "contact_dofs = []   \n",
+    "for j in range(18):\n",
+    "        contact_dofs.append( fem.locate_dofs_geometrical(Vu, boundaries[j][1])  )\n",
+    "\n",
+    "print(len(contact_dofs[0]))\n",
+    "print(boundaries)"
    ]
   },
   {
