use orininal xco yco still have hot spots

--- a/mech_disc/brake_pad_3.ipynb
+++ b/mech_disc/brake_pad_3.ipynb
@@ -12,7 +12,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DOLFINx version: 0.8.0\n",
+      "Simulation environment setup complete.\n",
+      "1: Total braking tims is  48.05 s\n",
+      "2: Total numb steps is  62\n",
+      "The file 'm-3-20.msh' exists, start creat now:\n",
+      "DOLFINx version: 0.8.0\n",
+      "Simulation environment setup complete.\n",
+      "\n",
+      "1: Progress: 1.7%. Use time:             14 s. Start: 2024-11-13 18:28:14.      "
+     ]
+    }
+   ],
    "source": [
     "from disc_f1 import *\n",
     "\n",
@@ -40,23 +56,23 @@
     "        else:\n",
     "           r_rub_new.append(0)\n",
     "\n",
-    "    for i in range(18):\n",
-    "        r_co = np.sqrt(x_co_new[i]**2+y_co_new[i]**2)\n",
-    "        r_all1 = r_co - r_rub_new[i]\n",
-    "        r_all2 = r_co + r_rub_new[i]\n",
+    "    #for i in range(18):\n",
+    "    #    r_co = np.sqrt(x_co_new[i]**2+y_co_new[i]**2)\n",
+    "    #    r_all1 = r_co - r_rub_new[i]\n",
+    "    #    r_all2 = r_co + r_rub_new[i]\n",
     "        \n",
-    "        if  r_all1 <= 185:\n",
-    "            r_rub_new[i] =  16\n",
-    "        elif r_all2 >= 310:\n",
-    "            r_rub_new[i] =  16\n",
-    "        else:\n",
-    "            r_rub_new[i] = r_rub_new[i]  \n",
-    "    print(r_rub_new)   \n",
-    "    #for i in range(18):   \n",
-    "    #    if  r_rub_new[i] >= 16 :\n",
-    "    #        r_rub_new[i] = 16\n",
+    "    #    if  r_all1 <= 185:\n",
+    "    #        r_rub_new[i] =  16\n",
+    "    #    elif r_all2 >= 310:\n",
+    "    #        r_rub_new[i] =  16\n",
     "    #    else:\n",
-    "    #        r_rub_new[i] = r_rub_new[i] \n",
+    "    #        r_rub_new[i] = r_rub_new[i]  \n",
+    "    #print(r_rub_new)   \n",
+    "    for i in range(18):   \n",
+    "        if  r_rub_new[i] >= 18 :\n",
+    "            r_rub_new[i] = 18\n",
+    "        else:\n",
+    "            r_rub_new[i] = r_rub_new[i] \n",
     "    \n",
     "    r_rub_new = np.array(r_rub_new)\n",
     "    S_rub_circle_new = np.pi * r_rub_new**2      #specific contact surfaces\n",
@@ -114,7 +130,8 @@
     "         deformed_co, new_c   = get_new_contact_nodes(x_co_zone, domain_pad, u_d1, Vu, z1, x_co, y_co )\n",
     "         # find new contact coordinates and rub radius.\n",
     "         x_co_new1, y_co_new1, r_rub_new, S_total_new, S_rub_circle_new = get_r_xco_yco (deformed_co, new_c )\n",
-    "         x_co_new, y_co_new = rub_rotation(x_co_new1, y_co_new1, angular_r*(i+1))\n",
+    "         #x_co_new, y_co_new = rub_rotation(x_co_new1, y_co_new1, angular_r*(i+1))\n",
+    "         #x_co_new, y_co_new = rub_rotation(x_co_new, y_co_new, angular_r*(i+1))\n",
     "             \n",
     "         S_rub_circle = S_rub_circle_new\n",
     "         fraction_c.append(  S_total_new/ 200 )\n",
