nothing new, transfer data

--- a/mech_disc/brake_pad_3.ipynb
+++ b/mech_disc/brake_pad_3.ipynb
@@ -25,7 +25,7 @@
       "DOLFINx version: 0.8.0\n",
       "Simulation environment setup complete.\n",
       "\n",
-      "1: Progress: 1.7%. Use time:             14 s. Start: 2024-11-13 18:28:14.      "
+      "1: Progress: 26.5%. Use time:             0 hours 2 min. Start: 2024-11-14 10:42:31."
      ]
     }
    ],
@@ -70,7 +70,7 @@
     "    #print(r_rub_new)   \n",
     "    for i in range(18):   \n",
     "        if  r_rub_new[i] >= 18 :\n",
-    "            r_rub_new[i] = 18\n",
+    "            r_rub_new[i] = r_rub_new[i]\n",
     "        else:\n",
     "            r_rub_new[i] = r_rub_new[i] \n",
     "    \n",
@@ -239,7 +239,7 @@
     "plotter, sargs, renderer, warped, viridis, grid = plot_gif(V,u,gif_name)\n",
     "##solve\n",
     "#num_steps= int(num_steps)\n",
-    "num_steps= int(10)\n",
+    "num_steps= int(30)\n",
     " \n",
     "###################################################################\n",
     "x_co_zone   = 0.001\n",
