hot spot issues is due to definition of circle, r square should not area of circle

--- a/fun_practice.ipynb
+++ b/fun_practice.ipynb
@@ -1434,8 +1434,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7dcc4cbd-8877-4502-adcf-ffb2bd8ef1e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(18):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14c7e96f-1c5c-4d8e-a930-45bdff577d85",
    "metadata": {},
    "outputs": [],
    "source": []
