--- a/mech_disc/brake_pad_3_wear.ipynb
+++ b/mech_disc/brake_pad_3_wear.ipynb
@@ -11,17 +11,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DOLFINx version: 0.8.0\n",
+      "Simulation environment setup complete.\n",
+      "1: Total braking tims is  49.61 s\n",
+      "2: Total numb steps is  123\n",
+      "The file 'm-3-3.msh' exists, start creat now:\n",
+      "\n",
+      "1: Progress: 0.4%. Use time:             0 hours 1 min. Start: 2025-01-01 13:50:40.,\n",
+      "Rub radius square is  [18.76586513 18.88709495 18.87930522 18.78081828 18.86616052 18.71757327\n",
+      " 18.55496768 18.54360987 18.79407451 18.80083191 18.88764122 18.76071785\n",
+      " 18.72853099 18.78373417 18.48990621 18.70272035 18.5852128  18.76939394]\n",
+      "1: Progress: 0.8%. Use time:             0 hours 2 min. Start: 2025-01-01 13:50:40.,\n",
+      "Rub radius square is  [17.87369558 19.49767824 19.52887677 17.88925501 19.51196627 17.91607189\n",
+      " 17.91515542 17.9139701  17.91607189 19.52484594 19.4976623  17.91413448\n",
+      " 17.98236636 17.88702536 17.89788844 17.89788816 17.90526418 17.87181307]\n"
+     ]
+    }
+   ],
    "source": [
     "from disc_f_wear import *\n",
     "\n",
@@ -30,7 +44,7 @@
     "c_contact          = 1\n",
     "\n",
     "# Each time step rotation angular, and acc during lag, 1 is full acc, 0 is no acc.\n",
-    "angular_r          = 112\n",
+    "angular_r          = 1120\n",
     "v_vehicle, c_acc   = 160, 1\n",
     "z1,z2,z3,z4,z_all  = 20,33,30,83,8\n",
     "pad_v_tag          = 32\n",
@@ -67,7 +81,7 @@
     "#num_steps= int(10)\n",
     " \n",
     "###################################################################\n",
-    "x_co_zone   = 0.00009\n",
+    "x_co_zone   = 0.00005\n",
     "\n",
     "T_array,fraction_c,deformed_co,u_d1, d_wear   = solve_heat(Ti, u, num_steps, dt, x_co, y_co, angular_r, \\\n",
     "               t_brake, domain, S_rub_circle_ini, fdim,\\\n",
