change png figures as pdf since fenics2024 conference requirement

--- a/analysis/only_thermal/experiment_isolation/dx.ipynb
+++ b/analysis/only_thermal/experiment_isolation/dx.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "8f892a74-a57c-4ae0-bf5c-3120dbb0ad41",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save and display the plot\n",
-    "plt.savefig('ave_T_vs_dof.png')\n",
+    "plt.savefig('ave_T_vs_dof.pdf')\n",
     "plt.show()\n"
    ]
   },
